# helical-workbench

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  README.md  docker-compose.yaml  package-lock.json  package.json  turbo.json
apps/airflow/: Dockerfile  README.md  docker-compose.yaml  package.json  pyproject.toml  requirements.txt
apps/airflow/config/: airflow.cfg
apps/airflow/dags/: execute_inference_helical_model_dag.py
apps/airflow/dags/files/: output.csv
apps/backend/: Dockerfile  README.md  package.json  pyproject.toml
apps/backend/src/helical_workbench_backend/: main.py
apps/backend/src/helical_workbench_backend/api/: router.py
apps/backend/src/helical_workbench_backend/api/dependencies/: airflow.py
apps/backend/src/helical_workbench_backend/api/models/: inference_job_run.py
apps/backend/src/helical_workbench_backend/api/routes/: inference_job_runs.py
apps/backend/src/helical_workbench_backend/clients/: airflow.py  airflow_authenticated_client.py
apps/backend/src/helical_workbench_backend/services/: batch_inference_processor.py
apps/backend/tests/test_helical_workbench_backend/clients/: test_airflow_authenticated_client.py
apps/backend/tests/test_helical_workbench_backend/routes/: test_inference_job_runs.py
apps/backend/tests/test_helical_workbench_backend/services/: test_batch_inference_processor.py
apps/web/: Dockerfile  README.md  eslint.config.js  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/components/: JobLaunchForm.tsx  JobList.tsx  ResultsView.tsx
apps/web/app/lib/: api.ts
(+3 files in other folders)
